Final PWA-ready Grade Calculator

--- a/grade-calculator/manifest.json
+++ b/grade-calculator/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Student Grade Calculator",
   "short_name": "GradeCalc",
-  "start_url": "./",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6a0dad",
