--- a/todo-app/manifest.json
+++ b/todo-app/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "Pro To-Do App",
-  "short_name": "ToDo",
-  "start_url": "./index.html",
+  "short_name": "To-Do",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#6a0dad",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icon-192.png",
