--- a/grade-calculator/manifest.json
+++ b/grade-calculator/manifest.json
@@ -1,11 +1,10 @@
 {
-  "name": "Student Grade Calculator",
-  "short_name": "GradeCalc",
+  "name": "Lavanya Portfolio",
+  "short_name": "Portfolio",
   "start_url": "./index.html",
   "display": "standalone",
-  "display_override": ["standalone"],
   "background_color": "#ffffff",
-  "theme_color": "#6a0dad",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "icon-192.png",
