--- a/grade-calculator/manifest.json
+++ b/grade-calculator/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Lavanya Portfolio",
-  "short_name": "Portfolio",
+  "name": "Grade Calculator",
+  "short_name": "Grades",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#000000",
+  "theme_color": "#6c5ce7",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
